--- a/django_project/ford3/static/css/wizard_form.css
+++ b/django_project/ford3/static/css/wizard_form.css
@@ -1,3 +1,10 @@
+.form-campus-title {
+    text-overflow: ellipsis;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 .nav-wizard-steps {
     margin-top: 1rem;
     margin-bottom: 1rem;
